==> Eouian/LiteRadio-CDC/LiteRadio_PLUS-main(CDC)/USER/Drivers/tx_main.c <==
#include "common.h"
#include "radiolink.h"
#include "function.h"
#include "crsf.h"
#include "tim.h"
#include "stmflash.h"
#include "stdbool.h"
#include "sx1280.h"
#include "fhss.h"
#include "mixes.h"
#define Radio SX1280
#define Radio_Config SX1280_Config
#define RXnb SX1280_RXnb
#define TXnb SX1280_TXnb
#define SetFrequencyReg SX1280_SetFrequencyReg
#include "sx1276.h"
#include "fhss.h"
#define Radio SX1276
#define Radio_Config SX1276_Config
#define RXnb SX1276_RXnb
#define TXnb SX1276_TXnb
#define SetFrequencyReg SX1276_SetFrequencyReg
#define RX_CONNECTION_LOST_TIMEOUT 3000LU // After 3000ms of no TLM response consider that slave has lost connection
#define syncSpamAResidualTimeMS 500 // we spam some more after rate change to help link get up to speed
#define syncSpamAmount 3

void ProcessTLMpacket()
{
    inCRC = (((uint16_t)(Radio.radioRXdataBuffer[0] & 0xFC)) << 6 ) | Radio.radioRXdataBuffer[7];

    Radio.radioRXdataBuffer[0] &= 0x03;
    uint16_t calculatedCRC = calcCrc14(Radio.radioRXdataBuffer, 7, CRCInitializer);

    uint8_t type = Radio.radioRXdataBuffer[0] & TLM_PACKET;
    uint8_t TLMheader = Radio.radioRXdataBuffer[1];

    if ((inCRC != calculatedCRC))
    {
        return;
    }

    if (type != TLM_PACKET)
    {
        return;
    }

    if (connectionState != connected)
    {
        connectionState = connected;
        // LPD_DownlinkLQ.init(100);
        //Serial.println("got downlink conn");
    }

    LastTLMpacketRecvMillis = HAL_GetTick();
    // LQCalc.add();

    switch(TLMheader & ELRS_TELEMETRY_TYPE_MASK)
    {
        case ELRS_TELEMETRY_TYPE_LINK:
            // RSSI received is signed, proper polarity (negative value = -dBm)
            linkStatistics.uplink_RSSI_1 = Radio.radioRXdataBuffer[2];
            linkStatistics.uplink_RSSI_2 = Radio.radioRXdataBuffer[3];
            linkStatistics.uplink_SNR = Radio.radioRXdataBuffer[4];
            linkStatistics.uplink_Link_quality = Radio.radioRXdataBuffer[5];
          //  linkStatistics.uplink_TX_Power = POWERMGNT.powerToCrsfPower(POWERMGNT.currPower());
            linkStatistics.downlink_SNR = Radio.LastPacketSNR;
            linkStatistics.downlink_RSSI = Radio.LastPacketRSSI;
            //linkStatistics.downlink_Link_quality = LPD_DownlinkLQ.update(LQCalc.getLQ()) + 1; // +1 fixes rounding issues with filter and makes it consistent with RX LQ Calculation
          //  linkStatistics.rf_Mode = (uint8_t)RATE_4HZ - (uint8_t)ExpressLRS_currAirRate_Modparams->enum_rate;
            //MspSender.ConfirmCurrentPayload(Radio.RXdataBuffer[6] == 1);
            break;

    }
}

void GenerateSyncPacketData()
{
    const uint8_t SwitchEncMode = 0x01;
    uint8_t Index;
    //uint8_t TLMrate;
    if (syncSpamCounter)
    {
        Index = (tx_config.rate & 0x03);
//        TLMrate = (tx_config.tlm & 0x07);
    }
    else
    {
        Index = (ExpressLRS_currAirRate_Modparams->index & 0x03);
//        TLMrate = (ExpressLRS_currAirRate_Modparams->TLMinterval & 0x07);
    }
    expresslrs_tlm_ratio_e newRatio = (StubbornSender_IsActive()) ? TLM_RATIO_1_2 : (expresslrs_tlm_ratio_e)tx_config.tlm;

    if (connectionState == connected && ExpressLRS_currAirRate_Modparams->TLMinterval < newRatio)
    LastTLMpacketRecvMillis = SyncPacketLastSent;
    ExpressLRS_currAirRate_Modparams->TLMinterval = newRatio;
    
    Radio.radioTXdataBuffer[0] = SYNC_PACKET & 0x03;
    Radio.radioTXdataBuffer[1] = FHSSgetCurrIndex();
    Radio.radioTXdataBuffer[2] = NonceTX;
    Radio.radioTXdataBuffer[3] = (Index << 6) + (newRatio << 3) + (SwitchEncMode << 1);
    Radio.radioTXdataBuffer[4] = UID[3];
    Radio.radioTXdataBuffer[5] = UID[4];
    Radio.radioTXdataBuffer[6] = UID[5];
  
    SyncPacketLastSent = HAL_GetTick();
    if (syncSpamCounter)
        --syncSpamCounter;
}

void SetRFLinkRate(uint8_t index) // Set speed of RF link (hz)
{
    expresslrs_mod_settings_s * ModParams = get_elrs_airRateConfig(index);
    expresslrs_rf_pref_params_s * RFperf = get_elrs_RFperfParams(index);
    uint8_t invertIQ = UID[5] & 0x01;
    if ((ModParams == ExpressLRS_currAirRate_Modparams)
        && (RFperf == ExpressLRS_currAirRate_RFperfParams)
        && (invertIQ == Radio.IQinverted))
    return;
    TIM1->ARR = ModParams->interval;
    Radio_Config(ModParams->bw, ModParams->sf, ModParams->cr, GetInitialFreq(), ModParams->PreambleLen, invertIQ);

    ExpressLRS_currAirRate_Modparams = ModParams;
    ExpressLRS_currAirRate_RFperfParams = RFperf;

    connectionState = disconnected;
    rfModeLastChangedMS = HAL_GetTick();
}

uint16_t SendRCdataToRF(uint16_t* crsfcontrol_data)
{

    if (!InBindingMode)
        NonceTX++; 
    
    busyTransmitting = 1;
    uint32_t now = HAL_GetTick();
    static uint8_t syncSlot;
//    uint8_t *data;
//    uint8_t maxLength;
//    uint8_t packageIndex;

//    /////// This Part Handles the Telemetry Response ///////
//    if ((uint8_t)ExpressLRS_currAirRate_Modparams->TLMinterval > 0)
//    {
//        uint8_t modresult = (NonceTX) % TLMratioEnumToValue(ExpressLRS_currAirRate_Modparams->TLMinterval);
//        if (modresult == 0)
//        { // wait for tlm response
//            if (WaitRXresponse == 1)
//            {
//                WaitRXresponse = 0;
//                //LQCalc.inc();
//                return 0;
//            }
//            else
//            {
//                NonceTX++;
//            }
//        }
//    }

    uint32_t SyncInterval;

    SyncInterval = (connectionState == connected) ? ExpressLRS_currAirRate_RFperfParams->SyncPktIntervalConnected : ExpressLRS_currAirRate_RFperfParams->SyncPktIntervalDisconnected;

    bool skipSync = InBindingMode;

    uint8_t NonceFHSSresult = NonceTX % ExpressLRS_currAirRate_Modparams->FHSShopInterval;
//    uint8_t NonceFHSSresultWindow = (NonceFHSSresult == 1 || NonceFHSSresult == 2) ? 1 : 0; // restrict to the middle nonce ticks (not before or after freq chance)
    uint8_t WithinSyncSpamResidualWindow = (HAL_GetTick() - rfModeLastChangedMS < syncSpamAResidualTimeMS) ? 1 : 0;
    if((syncSpamCounter || WithinSyncSpamResidualWindow) &&  (NonceFHSSresult == 1 || NonceFHSSresult == 2))
    {  
        GenerateSyncPacketData();
        syncSlot = 0;
    }
    else if((!skipSync) && ((syncSlot / 2) <= NonceFHSSresult) && (now - SyncPacketLastSent > SyncInterval) && (Radio.currFreq == GetInitialFreq())) // don't sync just after we changed freqs (helps with hwTimer.init() being in sync from the get go)
    {
//		 //在发送补偿包的时候，不知道为什么，定时器中断时间会提前中断？需要加延时校准，否者在连接betaflight SPI接收机时 接收端会跳频混乱，后续应该会改善。
//		if(tx_config.rate == 0x01)  //250Hz
//		{
//			delay(2000);     
//		}
//		if(tx_config.rate == 0x02)  //150Hz
//		{
//			delay(1000);     
//		}
//		if(tx_config.rate == 0x00)  //500Hz
//		{
//			delay(3000);     
//		}
        GenerateSyncPacketData();
        syncSlot = (syncSlot + 1) % (ExpressLRS_currAirRate_Modparams->FHSShopInterval * 2);
    }
    else
    {
        if(NextPacketIsMspData && StubbornSender_IsActive())
        {
            uint8_t *data;
            uint8_t maxLength;
            uint8_t packageIndex;
            StubbornSender_GetCurrentPayload(&packageIndex, &maxLength, &data);
            
            Radio.radioTXdataBuffer[0] = MSP_DATA_PACKET & 0x03;
            Radio.radioTXdataBuffer[1] = packageIndex; 
            Radio.radioTXdataBuffer[2] = maxLength > 0 ? *data : 0;
            Radio.radioTXdataBuffer[3] = maxLength >= 1 ? *(data + 1) : 0;
            Radio.radioTXdataBuffer[4] = maxLength >= 2 ? *(data + 2) : 0;
            Radio.radioTXdataBuffer[5] = maxLength >= 3 ? *(data + 3) : 0;
            Radio.radioTXdataBuffer[6] = maxLength >= 4 ? *(data + 4) : 0;           
            // send channel data next so the channel messages also get sent during msp transmissions
            NextPacketIsMspData = 0;
            // counter can be increased even for normal msp messages since it's reset if a real bind message should be sent
            BindingSendCount++;
            if (ExpressLRS_currAirRate_Modparams->TLMinterval != TLM_RATIO_1_2)
                syncSpamCounter = 1;
            if (InBindingMode)
            {
                // exit bind mode if package after some repeats
                if (BindingSendCount > 6) 
                {
                    ExitBindingMode();
                }
            }
        }
        else
        {
            // always enable msp after a channel package since the slot is only used if MspSender has data to send
            NextPacketIsMspData = 1;
            GenerateChannelDataHybridSwitch8(Radio.radioTXdataBuffer, crsfcontrol_data);
        }
    }

    ///// Next, Calculate the CRC and put it into the buffer /////

    uint16_t crc = calcCrc14(Radio.radioTXdataBuffer, 7, CRCInitializer);
    Radio.radioTXdataBuffer[0] =(Radio.radioTXdataBuffer[0] & 0x03) | ((crc >> 6) & 0xFC);
    Radio.radioTXdataBuffer[7] = crc & 0xFF;

    TXnb(Radio.radioTXdataBuffer, 8);
    
    return 0;
}

void EnterBindingMode()
{
    if (InBindingMode) 
    {
        // Don't enter binding if we're already binding
        return;
    }

    // Disable the TX timer and wait for any TX to complete
    HAL_TIM_Base_Stop_IT(&htim1);
    while (busyTransmitting);

    // Queue up sending the Master UID as MSP packets
    SendUIDOverMSP();

    // Set UID to special binding values
    UID[0] = BindingUID[0];
    UID[1] = BindingUID[1];
    UID[2] = BindingUID[2];
    UID[3] = BindingUID[3];
    UID[4] = BindingUID[4];
    UID[5] = BindingUID[5];

    CRCInitializer = 0;
    InBindingMode = 1;

    // Start attempting to bind
    // Lock the RF rate and freq while binding
    SetRFLinkRate(RATE_BINDING);
    Radio.currFreq = GetInitialFreq(); //set frequency first or an error will occur!!!
    SetFrequencyReg(Radio.currFreq); 
    // Start transmitting again
    TIM1->ARR = 20000;
    HAL_TIM_Base_Start_IT(&htim1);
}

void ExitBindingMode()
{
    if (!InBindingMode)
    {
        // Not in binding mode
        return;
    }

    // Reset UID to defined values
    UID[0] = MasterUID[0];
    UID[1] = MasterUID[1];
    UID[2] = MasterUID[2];
    UID[3] = MasterUID[3];
    UID[4] = MasterUID[4];
    UID[5] = MasterUID[5];

    CRCInitializer = (UID[4] << 8) | UID[5];

    InBindingMode = 0;
    StubbornSender_ResetState();

    switch(tx_config.rate)
    {
        case FREQ_2400_RATE_500HZ:
            break;
        case FREQ_2400_RATE_250HZ:
            SetRFLinkRate(FREQ_2400_RATE_250HZ);
            TIM1->ARR = 4000;
            break;
        case FREQ_2400_RATE_150HZ: 
            SetRFLinkRate(FREQ_2400_RATE_150HZ);
            TIM1->ARR = 6666;
            break;                    
        case FREQ_2400_RATE_50HZ:
            SetRFLinkRate(FREQ_2400_RATE_50HZ);
            TIM1->ARR = 20000;
            break;
        default:
            break;
    }

}

void SendUIDOverMSP()
{
    BindingPackage[0] = MSP_ELRS_BIND;
    BindingPackage[1] = MasterUID[2];
    BindingPackage[2] = MasterUID[3];
    BindingPackage[3] = MasterUID[4];
    BindingPackage[4] = MasterUID[5];
    StubbornSender_ResetState();
    BindingSendCount = 0;
    StubbornSender_SetDataToTransmit(5, BindingPackage, ELRS_MSP_BYTES_PER_CALL);
    InBindingMode = 1;
}
